* Sep 13 2001 hship

framework:
- Fix error in ShowInspector.script (to set height and width of Inspector window)
- Make the Inspector Icon initially invisible (works in NN4, IE5, but not NN6)
- Allow for redirections outside of Tapestry

vlib:
- Add a visible break after the Browser

[ #461281 ] Redirect out of Tapestry

* Sep 12 2001 hship

framework:
- Reorganize the order in which components are built and bindings set
- Allow attributes from the template to provide bindings for formal parameters

vlib:
- Create a test case for [ #450988 ] on the admin.TransferBooks page.

[ #450988 ] Inherited bindings vs. HTML static

* Sep 11 2001 hship

framework:
- Add IRenderDescription interface, make some key classes implement it
- Change RequestContext to notice and use the IRenderDescription interface when displaying
  classes
- Bump the framework version up to 1.0.6

* Sep 10 2001 hship

doc:
- Fix minor errors in Developer's Guide

framework:
- Fix error in IntegerField.jwc
- Fix some incorrect JavaDoc comments
- Create method ApplicationServlet.doService, which will make it easier
  to analyze performance
  
contrib:
- Fix error in MultiplePropertySelection (was using IPropertySelectionRenderer
  not IMultiplePropertySelectionRenderer).

vlib:
- Add icons, CSS styles and support for info and warning messages

tutorial, vlib, wap:
- Fix DTD in web.xml (2.2 not 1.2)


[ #460383 ] web.xml DTD wrong
[ #460384 ] MultiPropertySelection render binding
[ #460387 ] IntegerField.jwc wrong

* Sep 4 2001 hship

Release 1.0.5

* Sep 4 2001 hship

- Updated to Jetty 3.1RC9

doc:
- Add description of <include-script> element in Tapestry Script
- Update the Inspector images in the Developer's Guide and Tutorial
- Mention JBoss 2.4.0

vlibbeans:
- Modify config files for JBoss 2.4.0

web:
- Improve navigation

* Sep 4 2001 hship

framework:
- More tweaking to ShowInspector scripts (Netscape 4 and 6 work, but have trouble with scrollbars)