@@ -1,0 +1,12 @@
+<html>
+<!-- $Id$ -->
+<head>
+<title>Redirect Target</title>
+</head>
+<body>
+<h1>Redirect Target</h1>
+
+<p>You have reached the redirect target page.
+
+</body>
+</html>
